--- a/variables.env
+++ b/variables.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
-DATABASE=mongodb+srv://BrunoSpitti:Desejoinsano1!@learnnode-wi4my.mongodb.net/test?retryWrites=true&w=majority
+DATABASE=mongodb+srv://BrunoSpitti:Desejoinsano1!@learnnode-wi4my.mongodb.net/learn-node?retryWrites=true&w=majority
 MAIL_USER=123
 MAIL_PASS=123
 MAIL_HOST=smtp.mailtrap.io
